bauer/tests/ui/tuple-too-few-names.fail.stderr
error: Fewer names than elements in tuple
 --> tests/ui/tuple-too-few-names.fail.rs:5:20
  |
5 |     #[builder(tuple(a, b))]
  |                    ^^^^^^

warning: unused variable: `field_a`
 --> tests/ui/tuple-too-few-names.fail.rs:6:5
  |
6 |     field_a: (i32, i32, i32),
  |     ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_field_a`
  |
  = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default
